# Simple-SVM

./: .gitmodules  stack.yaml  svm-simple.cabal
src/AI/SVM/: Simple.hs
