name:                svm-simple
version:             3.22
synopsis:            Medium level, simplified, bindings to libsvm
description:
  This is a set of simplified bindings to libsvm <http://www.csie.ntu.edu.tw/~cjlin/libsvm/> suite
  of support vector machines. This package provides tools for classification, one-class classification
  and support vector regression. 
  .
  Changes in version 3.22          
  * Rebinding the libsvm 3.22          
  .
  Changes in version 0.2.6.1
  .
license:             BSD3
license-file:        LICENSE
author:              Ville Tirronen <aleator@gmail.com>
                     John Lee <me@qinka.pro>
maintainer:          John Lee <me@qinka.pro>
-- homepage:            http://github.com/aleator/Simple-SVM
-- bug-reports:         http://github.com/aleator/Simple-SVM/issues
Copyright:           (c) Ville Tirrone <aleator@gmail.com>
                     (c) Paulo Tanimoto <ptanimoto@gmail.com>
                     (c) 2017 John Lee [@Qinka]<me@qinka.pro>
category:            AI
                   , Pattern Classification
                   , Algorithms
                   , Support Vector Machine

build-type:          Simple
cabal-version:       >= 1.24


library
  hs-source-dirs:   src
  other-modules:    AI.SVM.Common
  Exposed-modules:  AI.SVM.Simple
                    AI.SVM.Base
  build-depends:    base         >= 4   && < 5
                  , bytestring
                  , bindings-svm == 3.22.*
                  , binary
                  , mwc-random
                  , vector
                  , directory
                  , containers
                  , deepseq
                  , monad-par 

